updated plots for paper

--- a/dataset-cartography/agree-to-disagree/cartography_plotting_disco.ipynb
+++ b/dataset-cartography/agree-to-disagree/cartography_plotting_disco.ipynb
@@ -1931,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1948,7 +1948,7 @@
        "  Text(0, 0.6000000000000001, '0.6')])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1977,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2040,7 +2040,7 @@
        "  Text(0, 1.2000000000000002, '1.2')])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2069,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2104,7 +2104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2113,7 +2113,7 @@
        "<Axes: xlabel='disagrees_with_majority', ylabel='Count'>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2141,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2188,7 +2188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2222,7 +2222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2248,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2265,7 +2265,7 @@
        "  Text(0, 35000.0, '35000')])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2292,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2309,7 +2309,7 @@
        "  Text(0, 1.2000000000000002, '1.2')])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2343,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2361,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2594,7 +2594,7 @@
        "4     0.826667  0.835020           79"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2609,7 +2609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2727,7 +2727,7 @@
        "[819 rows x 3 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2738,7 +2738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2747,7 +2747,7 @@
        "<Axes: xlabel='group_count', ylabel='f1_macro'>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2768,7 +2768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2886,7 +2886,7 @@
        "[819 rows x 3 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2897,7 +2897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2906,7 +2906,7 @@
        "632"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2917,7 +2917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2926,7 +2926,7 @@
        "41785"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2937,7 +2937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2946,7 +2946,7 @@
        "32769"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2964,7 +2964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2973,7 +2973,7 @@
        "185"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2985,7 +2985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3008,7 +3008,7 @@
        "       731, 733, 763])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3019,7 +3019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3072,7 +3072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -3118,7 +3118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3135,7 +3135,7 @@
        "  Text(0, 1.2000000000000002, '1.2')])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3162,7 +3162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3208,7 +3208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -3225,7 +3225,7 @@
        "  Text(0, 1.2000000000000002, '1.2')])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3252,7 +3252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3275,16 +3275,35 @@
        "        0, 1],\n",
        "       [\"<user> <user> <user> <user> <user> <user> People never defend the fact Trump is a racist with a defense of his character they just say look at what Biden supposedly did 40 years ago. Just bc someone cuts a bunch of soundbites without context doesn't make it facts. Do you know how critical thinking works?\",\n",
        "        0, 1],\n",
-       "       ['<user> <user> Cry more', 0, 1]], dtype=object)"
+       "       ['<user> <user> Cry more', 0, 1],\n",
+       "       ['<user> All you did a blaming. You were asked about COVID &amp; instead of giving solutions you started blaming president! Your party lost last time &amp; history will repeat it self on Nov 3rd.',\n",
+       "        0, 1],\n",
+       "       [\"Hunter Biden's #LaptopFromHell shows #HunterBidenEmails where #Hunter says #CorruptJoeBiden sold out America to #China to enrich <user> and his family.  I #BelieveHunter.\",\n",
+       "        0, 1],\n",
+       "       ['<user> And 550,000 have died already from heart disease this year in the US alone...... and we average 675,000 EACH YEAR.  what are you doing about that instead of just bitching and laughing all the time?',\n",
+       "        0, 1],\n",
+       "       ['i am so fucking ashamed to come from this area. Tinley Park: BE BETTER. The fact that all of these WHITE men think they’re hilarious for this shows exactly how ignorant they are. BLACK LIVES MATTER. orange presidents are not the same thing &amp; no one gives a fuck ab him.',\n",
+       "        1, 0],\n",
+       "       ['<user> You called us, Trump supporters, ugly dopes and chumps. What kind of bridge is that you demented old man? You yell and yell cuz you’re demented and full of hate.',\n",
+       "        1, 0],\n",
+       "       ['White people', 0, 1],\n",
+       "       ['Let it had been a Black Man ... would of had 50 shots in him 🤦🏽\\u200d♀️',\n",
+       "        0, 1],\n",
+       "       ['Officer pulls gun out on black kids for walking through a cut in Clayton, GA. This is straight up harassment! Smh.  . . . #getridofracewarcops #blacklivesmatter #stoppoliceharassments #dustynayshunent <url>',\n",
+       "        0, 1],\n",
+       "       ['<user> <user> <user> The masks are contributing to lots of respiratory infections which the criminals at the CDC are counting as Covid.',\n",
+       "        0, 1],\n",
+       "       ['#Trump fails another test of leadership.  A fool that belittles others for behavior that will save lives.   #VoteBlueNoMatterWho2020  <user>  <url>',\n",
+       "        0, 1]], dtype=object)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cartography_df_low_conf_in_majority[(cartography_df_low_conf_in_majority['confidence']>0.9) & (cartography_df_low_conf_in_majority['disagrees_with_majority']==True)][['text', 'label', 'majority_label']].values[:10]"
+    "cartography_df_low_conf_in_majority[(cartography_df_low_conf_in_majority['confidence']>0.9) & (cartography_df_low_conf_in_majority['disagrees_with_majority']==True)][['text', 'label', 'majority_label']].values[:20]"
    ]
   },
   {
@@ -3360,7 +3379,7 @@
     }
    ],
    "source": [
-    "cartography_df_merged[(cartography_df_merged['confidence'] < 0.2) & (cartography_df_merged['majority_confidence'] < 0.2)][['Mindex', 'text', 'label', 'majority_label']].values[:10]"
+    "cartography_df_merged[(cartography_df_merged['confidence'] < 0.1) & (cartography_df_merged['majority_confidence'] < 0.1) & (cartography_df_merged['disagre'])][['Mindex', 'text', 'label', 'majority_label']].values[:10]"
    ]
   },
   {
@@ -3600,37 +3619,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([['<user> <user> <user> George Floyd was not Jesus Christ', 1, 0],\n",
-       "       ['Fragility at its finest', 1, 0],\n",
-       "       ['Fuck <user> your sorry Peacock app.', 0, 1],\n",
-       "       ['<user> Why no one is talking about a bad guy George Floyd doing before his death? I hate the bad guy like him and also I really do not see that cop was killing Floyd. Maybe he died from shortage of illegal drug.',\n",
-       "        1, 1],\n",
+       "array([['<user> <user> <user> <user> Um the Kurds are helping the ppl Of the Ukraine stop Putin/Russian military from overthrowing the Ukrainian government. Trump Endangered the lives of many by cutting US aid in an effort to extort the Ukrainian president for help winning the election Which led to his impeachment .',\n",
+       "        1, 0],\n",
+       "       ['Doing some at-home validation... not sure I read the methods correctly. Some tips?   Fernandez et al. <user> <user> <user> <user> <user>   Paper just released <user> <url>  #COVID #WearTheDamnMask #WearAMaskSaveALife #WearMask <url>',\n",
+       "        1, 0],\n",
+       "       ['<user> <user> <user> <user> <user> <user> Bro what are they teaching in the history books. Hitler was 100% not socialist.',\n",
+       "        1, 0],\n",
+       "       ['M O R O N S', 1, 0],\n",
+       "       ['<user> PSA to all criminals.....Minneapolis is open for business.',\n",
+       "        1, 0],\n",
+       "       [\"<user> <user> <user> <user> <user> That's a cute dress sweetie. I'm not interested\",\n",
+       "        1, 0],\n",
+       "       ['ALL LIVES DONT MATTER TILL BLACK LIVES MATTER !! #BlackLivesMatter',\n",
+       "        1, 0],\n",
        "       ['Shocking! (Sorry, sarcasm doesn’t work well on Twitter)', 1, 0],\n",
-       "       ['Trump goes on all-caps tear against the media as the ‘ENEMY OF THE PEOPLE’ during coronavirus reporting <url>',\n",
+       "       ['<user> Did he really die of COVID-19. ???', 1, 0],\n",
+       "       ['<user> <user> Hell Yeah', 1, 0],\n",
+       "       ['Fragility at its finest', 1, 0],\n",
+       "       ['Holy hell this is awesome <url>', 1, 0],\n",
+       "       ['Candace Owens -  I DO NOT support George Floyd and I refuse to see him a... <url> via <user> Just saw this on YouTube....',\n",
        "        1, 0],\n",
-       "       ['FBI says Chinese hackers are trying to steal U.S. research on coronavirus vaccines READ MORE: <url>',\n",
+       "       ['#GeorgeFloyd was a criminal. Good icon for some black people. Tells a lot about them.',\n",
        "        1, 0],\n",
-       "       ['<user> The plague of stupidity is spreading much faster among the Radical Socialist Democrat Leftist Apocalyptic Party than the coronavirus. From MSNBC to this whinny simpleton posing as a member of Congress.',\n",
-       "        0, 1],\n",
-       "       ['<user> <user> <user> <user> Maybe there is none. Maybe it is simply that he is too much a pussy to come out and say it. But the Green New Deal is not his intention going forward. He had no problem saying that.',\n",
-       "        1, 1],\n",
-       "       ['I can hear faint protest sounds out my window. My prayers are with you all fighting for change 🙏🏽  God sees you &amp; your hearts. He is a just God &amp; justice will prevail!!!   #BlackLivesMatter  #FuckICE #WeAreInThisTogether',\n",
-       "        1, 0]], dtype=object)"
+       "       ['demand justice for james scurlock, killed by omaha racist during george floyd protest <url>',\n",
+       "        1, 0],\n",
+       "       ['Damning <url>', 1, 0],\n",
+       "       ['Holy hell this is awesome <url>', 1, 0],\n",
+       "       ['Mouthwash killed coronavirus in experiment <url> <user>', 1, 0],\n",
+       "       ['<user> Make America (re)Gret Again!!  #BlackLivesMatter', 1, 0],\n",
+       "       ['<user> <user> <user> <user> I thought you were on a break you nasty old grimalkin',\n",
+       "        0, 1]], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cartography_df_high_conf_in_majority[cartography_df_high_conf_in_majority['confidence'] < 0.1][['text', 'label', 'majority_label']].sample(10).values[:10]"
+    "cartography_df_high_conf_in_majority[(cartography_df_high_conf_in_majority['confidence'] < 0.1) & (cartography_df_high_conf_in_majority['disagrees_with_majority'] == True)][['text', 'label', 'majority_label']].sample(20).values"
    ]
   },
   {
@@ -4377,13 +4410,6 @@
    "source": [
     "Grouping by annotator"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
